--- a/microsetta_interface/templates/sitebase.jinja2
+++ b/microsetta_interface/templates/sitebase.jinja2
@@ -190,7 +190,7 @@
                         {{ profile_header_name }}
                     </h1>
                     <div class="header-nav-container">
-                        <nav class="navbar navbar-expand-md profile-nav-container">
+                        <nav class="navbar navbar-expand-lg profile-nav-container">
                             <div class="container-fluid ps-0 pe-0">
                                 <button class="navbar-toggler nav-toggle" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                     <span>
