--- a/microsetta_interface/templates/update_address_confirm.jinja2
+++ b/microsetta_interface/templates/update_address_confirm.jinja2
@@ -21,7 +21,7 @@
 
 {% block content %}
 <center>
-    <div class="card"  style="max-width: 800px; text-align: left;">
+    <div class="card card-account"  style="max-width: 800px; text-align: left;">
         <h5 class="card-header" style="text-align: center">{{ _('Address Updated') }}</h5>
         <div class="card-body">
             <center>
